$Id$


v0.51.2		06-Mar-2004

	upgrade:
		Before upgrade announce all new files!
		Compile all programs.
		Close the system with mbstat close.
		Install programs as root (as usual).
		Start mbsetup, this can take a while on a system with lots of
		files, during startup the files database will be converted.
		After the menu appears, enter global setup, exit and save.
		Open the system again.
		If you want you may restart mbtask.

	general:
		Updated to a new files database structure that allows for
		expanding the records like most other databases to allow new
		features.
		Removed all references to costsharing for ticfiles which wasn't
		fully implemented.
		Added setup items for subprocess priority and sync filesystem.
		Added setup parameter for filefind keyword length.

	libcommon.a:
		Moved the initial delay in the execute functions to the child
		process, that may be the trick to work around the lost child
		messages.
		Added enoughspace function to check diskspace.

	mbcico:
		Updated file request function to new files database structure.
		Fixed a compile problem on FreeBSD 5.1
		To test 3 bugfixes:
		Fixed a bug when a m_get was received with file offset = file
		size that would log a negative transfer time and transfer rate.
		Fixed a bug when a m_get message was received with the current
		file with offset = file size to properly close the file and
		unlink from the outbound queue.
		Fixed a bug when a m_get message was received on a file that
		was already transmitted to remove that file from the outbound
		queue.
		Removed some debug logging from inbound handler.

	mbfido:
		When removing files during tic import due to replace or maximum
		files, thumbnails are now also removed from disk.
		Updated tic file import function to the new files database
		structure.
		Added more checks and logging for adding new file announce 
		records. Newer files will replace the older record so the last
		one will be announced.